--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -93,6 +93,17 @@
             width: 100%;
         }
 
+        .nav-icons {
+            display: flex;
+            gap: 50px;
+            align-items: center;
+        }
+
+        .nav-signup-icon i{ 
+            position: relative;
+            font-size: 20px;
+        }
+
         .cart-icon {
             position: relative;
             font-size: 20px;
